// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Text スナップショット Colors 1`] = `
<body>
  <div>
    <p
      class="text_textStyle__xbx8xue text_textStyle_color_currentColor__xbx8xui text_textStyle_variants_color_currentColor__xbx8xu3 text_textStyle_size_100__xbx8xul text_textStyle_variants_size_100__xbx8xu6 text_textStyle_weight_normal__xbx8xuu"
    >
      currentColor (default)
    </p>
    <p
      class="text_textStyle__xbx8xue text_textStyle_color_primary__xbx8xuf text_textStyle_variants_color_primary__xbx8xu0 text_textStyle_size_100__xbx8xul text_textStyle_variants_size_100__xbx8xu6 text_textStyle_weight_normal__xbx8xuu"
    >
      primary
    </p>
    <p
      class="text_textStyle__xbx8xue text_textStyle_color_secondary__xbx8xug text_textStyle_variants_color_secondary__xbx8xu1 text_textStyle_size_100__xbx8xul text_textStyle_variants_size_100__xbx8xu6 text_textStyle_weight_normal__xbx8xuu"
    >
      secondary
    </p>
    <p
      class="text_textStyle__xbx8xue text_textStyle_color_tertiary__xbx8xuh text_textStyle_variants_color_tertiary__xbx8xu2 text_textStyle_size_100__xbx8xul text_textStyle_variants_size_100__xbx8xu6 text_textStyle_weight_normal__xbx8xuu"
    >
      tertiary
    </p>
  </div>
</body>
`;

exports[`Text スナップショット Sample 1`] = `
<body>
  <div>
    <h1
      class="text_textStyle__xbx8xue text_textStyle_color_currentColor__xbx8xui text_textStyle_variants_color_currentColor__xbx8xu3 text_textStyle_size_600__xbx8xuq text_textStyle_variants_size_600__xbx8xub text_textStyle_weight_bold__xbx8xut"
    >
      H1
    </h1>
    <h2
      class="text_textStyle__xbx8xue text_textStyle_color_currentColor__xbx8xui text_textStyle_variants_color_currentColor__xbx8xu3 text_textStyle_size_500__xbx8xup text_textStyle_variants_size_500__xbx8xua text_textStyle_weight_bold__xbx8xut"
    >
      H2
    </h2>
    <h3
      class="text_textStyle__xbx8xue text_textStyle_color_currentColor__xbx8xui text_textStyle_variants_color_currentColor__xbx8xu3 text_textStyle_size_400__xbx8xuo text_textStyle_variants_size_400__xbx8xu9 text_textStyle_weight_bold__xbx8xut"
    >
      H3
    </h3>
    <h4
      class="text_textStyle__xbx8xue text_textStyle_color_currentColor__xbx8xui text_textStyle_variants_color_currentColor__xbx8xu3 text_textStyle_size_300__xbx8xun text_textStyle_variants_size_300__xbx8xu8 text_textStyle_weight_bold__xbx8xut"
    >
      H4
    </h4>
    <p
      class="text_textStyle__xbx8xue text_textStyle_color_currentColor__xbx8xui text_textStyle_variants_color_currentColor__xbx8xu3 text_textStyle_size_100__xbx8xul text_textStyle_variants_size_100__xbx8xu6 text_textStyle_weight_normal__xbx8xuu"
    >
      P
    </p>
    <span
      class="text_textStyle__xbx8xue text_textStyle_color_currentColor__xbx8xui text_textStyle_variants_color_currentColor__xbx8xu3 text_textStyle_size_100__xbx8xul text_textStyle_variants_size_100__xbx8xu6 text_textStyle_weight_normal__xbx8xuu"
    >
      Span
    </span>
  </div>
</body>
`;

exports[`Text スナップショット Sizes 1`] = `
<body>
  <div>
    <p
      class="text_textStyle__xbx8xue text_textStyle_color_currentColor__xbx8xui text_textStyle_variants_color_currentColor__xbx8xu3 text_textStyle_size_50__xbx8xuj text_textStyle_variants_size_50__xbx8xu4 text_textStyle_weight_normal__xbx8xuu"
    >
      50
    </p>
    <p
      class="text_textStyle__xbx8xue text_textStyle_color_currentColor__xbx8xui text_textStyle_variants_color_currentColor__xbx8xu3 text_textStyle_size_100__xbx8xul text_textStyle_variants_size_100__xbx8xu6 text_textStyle_weight_normal__xbx8xuu"
    >
      100 (default)
    </p>
    <p
      class="text_textStyle__xbx8xue text_textStyle_color_currentColor__xbx8xui text_textStyle_variants_color_currentColor__xbx8xu3 text_textStyle_size_200__xbx8xum text_textStyle_variants_size_200__xbx8xu7 text_textStyle_weight_normal__xbx8xuu"
    >
      200
    </p>
    <p
      class="text_textStyle__xbx8xue text_textStyle_color_currentColor__xbx8xui text_textStyle_variants_color_currentColor__xbx8xu3 text_textStyle_size_300__xbx8xun text_textStyle_variants_size_300__xbx8xu8 text_textStyle_weight_normal__xbx8xuu"
    >
      300
    </p>
    <p
      class="text_textStyle__xbx8xue text_textStyle_color_currentColor__xbx8xui text_textStyle_variants_color_currentColor__xbx8xu3 text_textStyle_size_400__xbx8xuo text_textStyle_variants_size_400__xbx8xu9 text_textStyle_weight_normal__xbx8xuu"
    >
      400
    </p>
    <p
      class="text_textStyle__xbx8xue text_textStyle_color_currentColor__xbx8xui text_textStyle_variants_color_currentColor__xbx8xu3 text_textStyle_size_500__xbx8xup text_textStyle_variants_size_500__xbx8xua text_textStyle_weight_normal__xbx8xuu"
    >
      500
    </p>
    <p
      class="text_textStyle__xbx8xue text_textStyle_color_currentColor__xbx8xui text_textStyle_variants_color_currentColor__xbx8xu3 text_textStyle_size_600__xbx8xuq text_textStyle_variants_size_600__xbx8xub text_textStyle_weight_normal__xbx8xuu"
    >
      600
    </p>
    <p
      class="text_textStyle__xbx8xue text_textStyle_color_currentColor__xbx8xui text_textStyle_variants_color_currentColor__xbx8xu3 text_textStyle_size_700__xbx8xur text_textStyle_variants_size_700__xbx8xuc text_textStyle_weight_normal__xbx8xuu"
    >
      700
    </p>
    <p
      class="text_textStyle__xbx8xue text_textStyle_color_currentColor__xbx8xui text_textStyle_variants_color_currentColor__xbx8xu3 text_textStyle_size_800__xbx8xus text_textStyle_variants_size_800__xbx8xud text_textStyle_weight_normal__xbx8xuu"
    >
      800
    </p>
  </div>
</body>
`;

exports[`Text スナップショット Weights 1`] = `
<body>
  <div>
    <p
      class="text_textStyle__xbx8xue text_textStyle_color_currentColor__xbx8xui text_textStyle_variants_color_currentColor__xbx8xu3 text_textStyle_size_100__xbx8xul text_textStyle_variants_size_100__xbx8xu6 text_textStyle_weight_normal__xbx8xuu"
    >
      normal (default)
    </p>
    <p
      class="text_textStyle__xbx8xue text_textStyle_color_currentColor__xbx8xui text_textStyle_variants_color_currentColor__xbx8xu3 text_textStyle_size_100__xbx8xul text_textStyle_variants_size_100__xbx8xu6 text_textStyle_weight_bold__xbx8xut"
    >
      bold
    </p>
  </div>
</body>
`;
